cf_analysis_results/checkerframework_3.42.0_results/urld2fb1d2b05_thnaeff_Util_tgz-pJ8-ch_thn_util_tests_TreeTestJ8.txt
../dataset/june2020_dataset/urld2fb1d2b05_thnaeff_Util_tgz-pJ8-ch_thn_util_tests_TreeTestJ8/src/ch/thn/util/file/SingleInstanceLock.java:151: error: (required.method.not.called) $$ 4 $$ method close $$ new RandomAccessFile(file, "rw") $$ java.io.RandomAccessFile $$ regular method exit $$ ( 5509, 5541 ) $$ @MustCall method close may not have been invoked on new RandomAccessFile(file, "rw") or any of its aliases.
				randomAccessFile = new RandomAccessFile(file, "rw");
				                   ^
  The type of object is: java.io.RandomAccessFile.
  Reason for going out of scope: regular method exit
1 error
